# KS-Ping-Bot

./: .gitignore  Cargo.toml
src/: csv_related.rs  helper_functions.rs  main.rs  obtaining_csv_with_users.rs
