[package]
name = "KS-Ping-Bot"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
log = "0.4.27"
simple-logging = "2.0.2"
tokio = { version = "1.8", features = ["rt-multi-thread", "macros"] }
csv = "1.3.1"
grammers-client = "0.7.0"
grammers-session = "0.7.0"
serde = { version = "1.0.219", features = ["derive"] }

[lints.clippy]
needless_return = "allow"
